# rest-api-helper

./: .bazelignore  .bazelrc  .clang-tidy  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  bazel-bin  bazel-out  bazel-testlogs
.github/workflows/: ci.yml
build_utils_module/: BUILD.bazel  MODULE.bazel  README.md  defs.bzl
examples/: BUILD.bazel  basic_usage.cpp
patches/: disable_ssl.patch
src/: BUILD.bazel  hello.cpp  hello.hpp  main.cpp  rest_api.cpp  rest_api.hpp
tests/: BUILD.bazel  hello_test.cpp  rest_api_test.cpp
tests/strict_check/: BUILD.bazel  test.cpp
