package(default_visibility = ["//visibility:public"])

load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")
refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = {
        "//...": "",
    },
)

filegroup(
    name = "clang-format-config",
    srcs = [".clang-format"],
)

filegroup(
    name = "clang_tidy_config",
    srcs = [".clang-tidy"],
)
