module(
    name = "rest_api_helper",
    version = "0.0.1",
)

bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "cpp-httplib", version = "0.22.0")
bazel_dep(name = "platforms", version = "1.0.0")

bazel_dep(name = "googletest", version = "1.17.0", dev_dependency = True)
bazel_dep(name = "toolchains_llvm", version = "1.6.0", dev_dependency = True)
bazel_dep(name = "bazel_clang_format", version = "0.0.1", dev_dependency = True)
bazel_dep(name = "bazel_clang_tidy", version = "0.0.1", dev_dependency = True)

git_override(
    module_name = "bazel_clang_format",
    remote = "https://github.com/oliverlee/bazel_clang_format.git",
    commit = "af6c342dc592ad4f1af76d0260aac90d5c9b426f",
)

git_override(
    module_name = "bazel_clang_tidy",
    remote = "https://github.com/erenon/bazel_clang_tidy.git",
    commit = "9e54bbb15d1939a9d030c52f3032886a0b278f98",
)

# LLVM Setup
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(
    llvm_version = "17.0.6",
)
use_repo(llvm, "llvm_toolchain")
register_toolchains("@llvm_toolchain//:all", dev_dependency = True)


bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "0e990032f3c5a866e72615cf67e5ce22186dcb97",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)