load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "rest_api_helper",
    srcs = ["hello.cpp"],
    hdrs = ["hello.hpp"],
    copts = ["-Wall", "-Wextra", "-Wpedantic", "-Werror"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "example_app",
    srcs = ["main.cpp"],
    copts = ["-Wall", "-Wextra", "-Wpedantic", "-Werror"],
    deps = [":rest_api_helper"],
    visibility = ["//visibility:private"],
)
