load("//build_utils:defs.bzl", "strict_cc_binary", "strict_cc_library")

strict_cc_library(
    name = "rest_api_helper",
    srcs = ["hello.cpp"],
    hdrs = ["hello.hpp"],
    visibility = ["//visibility:public"],
)

strict_cc_binary(
    name = "example_app",
    srcs = ["main.cpp"],
    deps = [":rest_api_helper"],
    visibility = ["//visibility:private"],
)
